@@ -94,17 +94,14 @@ namespace Orthanc
                                       const std::string& sopClassUid,
                                       DicomTransferSyntax transferSyntax,
                                       bool hasPreferred,
-                                      DicomTransferSyntax preferred,
-                                      bool alwaysRenegotiate,
-                                      bool enableLogs);
+                                      DicomTransferSyntax preferred);
 
 #if ORTHANC_ENABLE_DCMTK_TRANSCODING == 1
     void LookupTranscoding(std::set<DicomTransferSyntax>& acceptedSyntaxes,
                            const std::string& sopClassUid,
                            DicomTransferSyntax sourceSyntax,
                            bool hasPreferred,
-                           DicomTransferSyntax preferred,
-                           bool alwaysRenegotiate);
+                           DicomTransferSyntax preferred);
 #endif
 
   public:
@@ -132,8 +129,7 @@ namespace Orthanc
                DcmFileFormat& dicom,
                bool hasMoveOriginator,
                const std::string& moveOriginatorAET,
-               uint16_t moveOriginatorID,
-               bool alwaysRenegotiate);
+               uint16_t moveOriginatorID);
 
     void Store(std::string& sopClassUid,
                std::string& sopInstanceUid,
@@ -141,8 +137,7 @@ namespace Orthanc
                size_t size,
                bool hasMoveOriginator,
                const std::string& moveOriginatorAET,
-               uint16_t moveOriginatorID,
-               bool alwaysRenegotiate);
+               uint16_t moveOriginatorID);
 
     void LookupParameters(std::string& sopClassUid,
                           std::string& sopInstanceUid,
@@ -158,8 +153,7 @@ namespace Orthanc
                    DicomTransferSyntax preferredTransferSyntax,
                    bool hasMoveOriginator,
                    const std::string& moveOriginatorAET,
-                   uint16_t moveOriginatorID,
-                   bool alwaysRenegotiate);
+                   uint16_t moveOriginatorID);
 #endif
     
 #if ORTHANC_ENABLE_DCMTK_TRANSCODING == 1
@@ -170,8 +164,7 @@ namespace Orthanc
                    size_t size,
                    bool hasMoveOriginator,
                    const std::string& moveOriginatorAET,
-                   uint16_t moveOriginatorID,
-                   bool alwaysRenegotiate);
+                   uint16_t moveOriginatorID);
 #endif
   };
 }
